Adding some localizable elements, Creating helper to present AlertController in any viewController

--- a/NasaTestObjc/en.lproj/Localizable.strings
+++ b/NasaTestObjc/en.lproj/Localizable.strings
@@ -13,3 +13,4 @@
 "PASSWORD_TEXTFIELD_PLACEHOLDER" = "password";
 "BUTTON_VER_LOGINS" = "See all logins";
 "LIST_OF_USERS" = "List of users";
+"ACTION_ALERT_CANCELAR" = "DISMISS";
