--- a/NasaTestObjc/pt-BR.lproj/Localizable.strings
+++ b/NasaTestObjc/pt-BR.lproj/Localizable.strings
@@ -13,3 +13,4 @@
 "PASSWORD_TEXTFIELD_PLACEHOLDER" = "senha";
 "BUTTON_VER_LOGINS" = "Ver logins cadastrados";
 "LIST_OF_USERS" = "Lista de usuários";
+"ACTION_ALERT_CANCELAR" = "CANCELAR";
