Validando o login do usuario com localização

--- a/NasaTestObjc/pt-BR.lproj/Localizable.strings
+++ b/NasaTestObjc/pt-BR.lproj/Localizable.strings
@@ -14,3 +14,4 @@
 "BUTTON_VER_LOGINS" = "Ver logins cadastrados";
 "LIST_OF_USERS" = "Lista de usuários";
 "ACTION_ALERT_CANCELAR" = "CANCELAR";
+"ERRO_LOGIN_INVALIDO" = "Login invalido";
