--- a/NasaTestObjc/en.lproj/Localizable.strings
+++ b/NasaTestObjc/en.lproj/Localizable.strings
@@ -14,3 +14,4 @@
 "BUTTON_VER_LOGINS" = "See all logins";
 "LIST_OF_USERS" = "List of users";
 "ACTION_ALERT_CANCELAR" = "DISMISS";
+"ERRO_LOGIN_INVALIDO" = "Invalid login";
