Adicionando cor na navbar, corrigindo animação

--- a/NasaTestObjc/en.lproj/Localizable.strings
+++ b/NasaTestObjc/en.lproj/Localizable.strings
@@ -15,3 +15,4 @@
 "LIST_OF_USERS" = "List of users";
 "ACTION_ALERT_CANCELAR" = "DISMISS";
 "ERRO_LOGIN_INVALIDO" = "Invalid login";
+"LIST_OF_APIS_TITLE" = "List of Apis";
