--- a/NasaTestObjc/pt-BR.lproj/Localizable.strings
+++ b/NasaTestObjc/pt-BR.lproj/Localizable.strings
@@ -15,3 +15,4 @@
 "LIST_OF_USERS" = "Lista de usuários";
 "ACTION_ALERT_CANCELAR" = "CANCELAR";
 "ERRO_LOGIN_INVALIDO" = "Login invalido";
+"LIST_OF_APIS_TITLE" = "Lista de apis titulo";
